--- a/dashboard-experimentacio-app/package.json
+++ b/dashboard-experimentacio-app/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@chakra-ui/react": "^3.30.0",
     "@emotion/react": "^11.14.0",
-    "next": "16.0.4",
+    "axios": "^1.13.2",
+    "next": "16.0.7",
     "next-themes": "^0.4.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "swr": "^2.3.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
