--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "recharts": "^3.6.0",
     "swr": "^2.3.7"
   },
   "devDependencies": {
